Use namespace to split codebase to multiple files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Project Manager</title>
 		<link rel="stylesheet" href="app.css" />
-		<script src="dist/app.js" defer></script>
+
+		<script src="dist/bundle.js" defer></script>
+		<!-- <script src="dist/app.js" defer></script> -->
+		<!-- <script src="dist/drag-drop-interfaces.js" defer></script>
+		<script src="dist/project-model.js" defer></script> -->
 	</head>
 	<body>
 		<template id="project-input">
