--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 		<title>Project Manager</title>
 		<link rel="stylesheet" href="app.css" />
 
-		<script src="dist/bundle.js" defer></script>
-		<!-- <script src="dist/app.js" defer></script> -->
-		<!-- <script src="dist/drag-drop-interfaces.js" defer></script>
-		<script src="dist/project-model.js" defer></script> -->
+		<script type="module" src="dist/app.js"></script>
 	</head>
 	<body>
 		<template id="project-input">
