--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Project Manager</title>
 		<link rel="stylesheet" href="app.css" />
 
-		<script type="module" src="dist/app.js"></script>
+		<script type="module" src="dist/bundle.js"></script>
 	</head>
 	<body>
 		<template id="project-input">
